# skilldecay

./: .gitignore  CITATION.bib  CITATION.cff  CONTRIBUTING.md  DATA_CARD.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: __init__.py
benchmarks/: __init__.py
benchmarks/coding_skill_debt/: exec_benchmark.py  run.py  spec.py
benchmarks/skill_debt_bench/: __init__.py  simulator.py
configs/: env.example.ps1  skilldebtbench.json
data/ablation/: ablation_table.md
data/coding_exec_skill_debt/: table.md
data/diagnosis/: diagnosis_report.md
data/skilldebtbench/: main_table.md
experiments/: summarize_results.py  synthetic_benchmark.py
scripts/: evaluate_diagnosis.py  llm_diagnose_failures.py  plot_skilldebtbench.py  run_skilldebtbench.py  summarize_skilldebtbench.py
src/skilldecay/: __init__.py  core.py  policy.py
src/skilldecay/llm/: __init__.py  clients.py
